2002-06-20  Elena Zannoni  <ezannoni@redhat.com>

        * event-top.c (command_handler): Don't use space_at_cmd_start
        unless there is sbrk() on the host. Assign time and space data
        to union fields of the appropriate length.

2002-06-16  Andrew Cagney  <ac131313@redhat.com>

	* NEWS: Mention below.

	Merge from mainline:
	2002-04-22 J. Brobecker <brobecker@gnat.com>:
	* symfile.h (get_section_index): Define.
	* symfile.c (get_section_index): New function.
	* mdebugread.c (SC_IS_SBSS): New macro.
	(SC_IS_BSS): Return true for the scBss storage class only, as
	the scSBss storage class refers to the .sbss section.
	(parse_partial_symbols): Discard the symbols which associated
	section does not exist.
	Make sure to use the .sbss section index for symbols which
	storage class is scBss, rather than using the .bss section index.

2002-05-28  Theodore A. Roth  <troth@verinet.com>

	* MAINTAINERS: Add myself as AVR maintainer.
	* NEWS: Note new avr target.

2002-06-07  Michal Ludvig  <mludvig@suse.cz>

	Merge from mainline:

	2002-05-27  Michal Ludvig  <mludvig@suse.cz>

		* x86-64-tdep.c (x86_64_skip_prologue): Remove obsolete 
		note. Let PC point right after the prologue before looking 
		up symbols.

2002-05-28  Theodore A. Roth  <troth@verinet.com>

	* Makefile.in: Add support for AVR target.
	* configure.tgt: Add support for AVR target.
	* avr-tdep.c: New file.
	* config/avr/avr.mt: New file.

2002-05-23  Andrew Cagney  <ac131313@redhat.com>

	From Ross Alexander at NEC Europe:
	* config/pa/hpux11w.mh (NATDEPFILES): Add solib.o.

2002-05-23  Andrew Cagney  <ac131313@redhat.com>

	* PROBLEMS: Mention s390 and FreeBSD 4.4 build problems.

2002-05-22  Michal Ludvig  <mludvig@suse.cz>

	* dwarf2cfi.c (frame_state_for): Added safety check for a valid
	fde->cie_ptr.
	(dwarf2_build_frame_info): Corrected handling of eh_frame.
	(dwarf2_build_frame_info): Add offset to fde->initial_location 
	so that frames of shared libraries are mapped correctly.